# cuda-warmup

./: .clangd  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  pixi.toml
docs/: reduce.md
include/: check.hpp  common.hpp  device_buffer.hpp  reduce.hpp  vector_add.hpp
scripts/: ncu-summary.sh
src/: main.cc  main.cu  reduce.cu  vector_add.cu  vector_add.cuh
tests/: test_reduce.cc  test_vector_add.cc  test_vector_add.cu
